<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Connexus2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_title">Connexus!</string>
    <string name="login_description">Login With Gmail</string>
    <string name="gmail_id">Gmail Id</string>
    <string name="gmail_pwd">Gmail Password</string>
    <string name="login_button">Login</string>
    <string name="view_button">View Streams</string>
    <string name="choose_image_button">Choose from your library</string>
    <string name="use_camera">Use Camera</string>
    <string name="add_message">Add a message and/or tags</string>
    <string name="upload">Upload</string>
    <string name="stream">Current Stream:</string>

    <color name="red">#ff0000</color>

    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="button_use">Use this picture</string>
    <string name="button_capture">Capture a picture</string>
    <string name="button_stream">Streams</string>
    <string name="nearby">Nearby</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_view_streams">ViewStreamsActivity</string>
    <string name="search">Search</string>
    <string name="my_subscribed_streams">My Subscribed Streams</string>
    <string name="find_streams">Find streams</string>
    <string name="search_info1">123 </string>
    <string name="search_info2">results of</string>
    <string name="search_info3">Lucknows,</string>
    <string name="more_search_results">More Results</string>
    <string name="search_info4">click on an image to view stream</string>
    <string name="title_activity_search_streams">SearchStreamsActivity</string>
    <string name="title_activity_view_astream">ViewAStreamActivity</string>
    <string name="view_info2">Lucknow</string>
    <string name="view_info1">View A Stream: </string>
    <string name="upload_an_image">Upload an Image</string>
    <string name="title_activity_nearby_streams">NearbyStreamsActivity</string>
    <string name="nearby_pictures">Nearby Pictures</string>
    <string name="more">More</string>
    <string name="view_all_streams">View All Streams</string>
    <string name="title_activity_get_all_streams">GetAllStreamsActivity</string>
    <string name="title_activity_get_streams">GetStreamsActivity</string>

</resources>
