<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UploadActivity" >

    <TextView
        android:id="@+id/hello_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/hello_title"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:textSize="36sp" />
    
    <Button
        android:id="@+id/choose_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hello_title"
        android:text="@string/choose_image_button"
        android:onClick="upLoad"
        android:layout_marginTop="20dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/use_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_image_button"
        android:text="@string/use_camera"
        android:layout_marginTop="20dp"
        android:onClick="takePhoto"
        android:textSize="20sp" />
    
    <EditText
        android:id="@+id/add_message"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_below="@id/use_camera"
        android:hint="@string/add_message"
        android:layout_marginTop="20dp"
        android:textSize="20sp" />
    
    <Button
        android:id="@+id/upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_message"
        android:text="@string/upload"
        android:onClick="upLoadHaddler"
        android:layout_marginTop="10dp"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/stream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/upload"
        android:text="@string/stream"
        android:textSize="20sp"
        android:layout_marginTop="20dp" />


</RelativeLayout>
