<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NearbyStreamsActivity" >

    <TextView
        android:id="@+id/hello_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/hello_title"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:textSize="36sp" />

	<GridView 
    	android:id="@+id/gridview"
    	android:layout_width="fill_parent" 
    	android:layout_height="270sp"
    	android:columnWidth="60dp"
    	android:numColumns="auto_fit"
        android:layout_below="@id/hello_title"
    	android:verticalSpacing="10dp"
    	android:horizontalSpacing="10dp"
    	android:stretchMode="columnWidth"
    	android:gravity="center"
	/>

    <TextView
        android:id="@+id/nearby_pictures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nearby_pictures"
        android:layout_below="@id/gridview"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textSize="28sp" />
	
    <Button
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gridview"
        android:layout_toRightOf="@id/nearby_pictures"
        android:text="@string/more"
        android:layout_marginTop="20dp"
        android:textSize="20sp" />
    
    <Button
        android:id="@+id/view_all_streams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nearby_pictures"
        android:text="@string/view_all_streams"
        android:onClick="ViewStreams"
        android:layout_marginTop="20dp"
        android:textSize="20sp" />

</RelativeLayout>
