<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CameraActivity" >

    <TextView
        android:id="@+id/hello_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/hello_title"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:textSize="36sp" />

  <FrameLayout
    android:id="@+id/camera_preview"
    android:layout_below="@id/hello_title"
    android:layout_width="fill_parent"
    android:layout_height="250dp"
    android:layout_weight="1"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    />

  <Button
    android:id="@+id/button_capture"
    android:text="@string/button_capture"
    android:layout_below="@id/camera_preview"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="15dp"
    android:textSize="15sp"
    />
  
  <Button
    android:id="@+id/button_use"
    android:text="@string/button_use"
    android:layout_below="@id/camera_preview"
    android:layout_toRightOf="@id/button_capture"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="15dp"
    android:onClick="upLoadHaddler"
    android:textSize="15sp"
    />

  <Button
    android:id="@+id/button_stream"
    android:text="@string/button_stream"
    android:layout_below="@id/button_capture"
    android:layout_centerHorizontal="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:onClick="ViewStreams"
    android:layout_marginTop="15dp"
    android:textSize="15sp"
    />

</RelativeLayout>
